# peripheral_traits

./: Cargo.toml  REAME.md  test.txt
docs/: OTP_Rust_Traits_Design.md  aspeed_i2c_design_document.md  aspeed_i2c_transfer_engine.md  hash_mac_enum_based_polimorphism  hash_mac_protocol_design.md  peripheral_traits_design_document.md  reverse_engineer_otp_aspeed_zephyr.md
osal/: Cargo.toml  README.md
osal/src/: error.rs  ipc.rs  lib.rs  task.rs
osal_impl/: Cargo.toml
osal_impl/src/: ipc.rs  main.rs
proposed-traits/: Cargo.toml
proposed-traits/examples/: enum_digestengine_example.rs  otp_aspeed.rs  software_digest_complete.rs  software_digest_impl_clean.rs  software_ecdsa_impl.rs  spdm_hash_negotiation.rs  spi_nor_adapter.rs
proposed-traits/src/: block_device.rs  common.rs  digest.rs  ecdsa.rs  i2c_target.rs  i3c_master.rs  i3c_target.rs  lib.rs  otp.rs  rsa.rs  symm_cipher.rs  system_control.rs
simulation/src/: digest.rs  digest_dispatch.rs  ecdsa.rs  lib.rs  main.rs
src/: digest.rs  ecdsa.rs  lib.rs  serde.rs
