[package]
name = "proposed-traits"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-storage = "0.3.1"
rand_core = "0.6"
async-trait = "0.1.51"
embedded-hal = "1"
embedded-io = "0.6.1"
sha2 = "0.10"
# ECDSA dependencies for reference implementation
p256 = "0.13"
ecdsa = "0.16"
elliptic-curve = "0.13"
signature = "2.1"
rand = "0.8"
zeroize = "1.6"

[[example]]
name = "otp_aspeed"
path = "examples/otp_aspeed.rs"

[[example]]
name = "spdm_hash_negotiation"
path = "examples/spdm_hash_negotiation.rs"

[[example]]
name = "software_digest_impl"
path = "examples/software_digest_impl.rs"

[[example]]
name = "software_digest_complete"
path = "examples/software_digest_complete.rs"

[[example]]
name = "software_ecdsa_impl"
path = "examples/software_ecdsa_impl.rs"

[[example]]
name = "spi_nor_adapter"
path = "examples/spi_nor_adapter.rs"
